# c-practical

./: 10.A]CRUD_file.c  2.A]Area_&_Circumference.c  2.B]SinValueOfX.c  3.A]Odd_Or_Even.c  3.B]Factorial.c  3.C]Prime_Number.c  4.A]Counting_No_Of_times_in_Number.c  4.B]Matrix_Addition.c  4.C]Matrix_Multiplication.c  5.A]Sting.c  6.A]Call_by_Value.c  6.B]Call_by_Reference.c  8.A]Store_Dynamic_Data.c  9.A]Storing_information_struc.c  9.B]Storing_information_union.c  CMakeLists.txt  file.txt
